--- a/TuneHub/src/app/Components/Chat/chat-bot/chat-bot.component.css
+++ b/TuneHub/src/app/Components/Chat/chat-bot/chat-bot.component.css
@@ -27,13 +27,14 @@
 
 }
 .chat-icon {
-  width: 55px;
+  width: 30px;
   height: 45px;
 }
 
 .chat-icon {
-  width:120px;
+  width:100px;
   height: auto;
+  border-radius: 50%;
 }
 
 /*********************************
