--- a/TuneHub/src/app/Components/Shared/footer/footer.component.html
+++ b/TuneHub/src/app/Components/Shared/footer/footer.component.html
@@ -44,9 +44,9 @@
   <div class="footer-social">
     <div class="social-icons">
       <a routerLink="/facebook"><mat-icon>facebook</mat-icon></a>
-      <a routerLink="/twitter"><mat-icon>twitter</mat-icon></a>
-      <a routerLink="/instagram"><mat-icon>instagram</mat-icon></a>
-      <a routerLink="/youtube"><mat-icon>youtube</mat-icon></a>
+      <a routerLink="/twitter"><mat-icon>public</mat-icon></a>
+      <a routerLink="/instagram"><mat-icon>photo_camera</mat-icon></a>
+      <a routerLink="/youtube"><mat-icon>play_circle</mat-icon></a>
       <a routerLink="/linkedin"><mat-icon>linkedin</mat-icon></a>
     </div>
   </div>
